# abz_agency_test_task

./: .gitignore  Makefile  README.md  employees_generator.py  pyproject.toml  setup.cfg
employee_tree/: filters.py  mixins.py  models.py  settings.py  urls.py  views.py
employee_tree/employee/: admin.py  apps.py  filters.py  forms.py  models.py  urls.py  views.py
employee_tree/employee/migrations/: 0001_initial.py  0002_alter_employee_id.py
employee_tree/employee_tree/: settings.py
employee_tree/migrations/: 0001_initial.py  0002_delete_employee.py
employee_tree/static/employee_tree/css/: employee_tree.css
employee_tree/static/employee_tree/js/: employee_list.js  employee_tree.js
employee_tree/templates/: employee.html  employee_list.html  employee_rows.html  employee_show.html  home_page.html
employee_tree/templates/layouts/: base.html  delete.html  filter.html  footer.html  form.html  header.html  pagination.html
employee_tree/tests/: test_home_page.py
